 *   - ~ rewinding a stream caused gzip breakage (rev. 17_b14)
 *   - ~ Fix segfault (glutil-precheck) (rev. 17_b15)
 *   - ~ Initialize glob_*_stor arrays with MAX_GLOB_STOR_AR_COUNT instead of fixed value (rev. 17_b16)
 *   - %~ Fixed stats output and made it a bit more informative (rev. 18)
 *   - % Automake: --enable-precheck does not disable regular (or chrooted) binary build (rev. 18_b1)
 *   - ! self_get_path checking read access twice (rev. 18_b2) 
 *
 * v2.2:
 *
 *   - % Automake
 *   - ~ -r and -w broken (since 2.2)
 *   - ~ LREF_ONLINE_H_ used in two different headers (rev. 3)
 *
 * v2.1:
 * 
 *   - + Arithmetic pre-processor (-print[f] only)
 *   - %! LOM argument processing more efficient (rev. 1) 
 *   - ~ Memleak: -print bytecode header memory not freed (rev. 2)
 *   - ~ Field values were not interpreted properly (arithmetic pre-processor) (rev. 3)
 *   - ~ ref_to_val_ptr_gen1 failing to match field name (rev. 4)
 *   - % Replaced strcmp with strncmp in ref_to_val_macro (rev. 5)
 *   - + Add GENERIC-4 log (rev. 6)
 *   - % --raw with -z dumps loaded data to stdout (rev. 7)
 *   - ~ Default match subject offset misaligned on GE4 (string matching) (rev. 8)
 *   - ! Optimize enum_dir (rev. 8)
 *   - ~! {crc32} calculated each time it was requested, instead of just once for a file (rev. 9)
 *   - % Hexadecimal numbers need to be given with 0x in front (LOM and arithmetic pre-processor) (rev. 9)
 *   - % #<format> works with arithmetics (extended directive '?m', see MANUAL) (rev. 9)
 *   - ~ Broke LOM and arithmetic pre-processor args float detection in rev. 9 (rev. 10)
 *   - ~ Properly align directives and data-type sizes on output (arith. preproc)  (rev. 10)
 *   - % Non-field numerals given to arithmetic pre-processor are forced to same type as first argument (rev. 11)
 *   - + Arithmetic pre-processor accepts bitwise operators (see MANUAL) (rev. 12)
 *   - %! Avoid copying and null-terminating strings where not needed (ref_to_val_af) (rev. 13)